--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,7 @@
 
     <div class="large-9 columns">
       <h1>About Us</h1>
+      <p>We're some pretty cool people ;)</p> 
     </div>
 
     <div class="large-3 columns">
@@ -278,6 +279,14 @@
               </label>
             </div>
           </div>
+           <div class="row">
+            <div class="large-12 columns">
+              <label>Cover Source
+                <input type="text" placeholder="ex: http://ecx.images-amazon.com/images/I/71M32wxOOmL.jpg" />
+              </label>
+            </div>
+          </div>
+          <button id="add">Add Book</button>
         </form>
     </script>
 <!--_______________________________________________________-->
