--- a/public/www/index.html
+++ b/public/www/index.html
@@ -379,7 +379,7 @@ document.addEventListener("deviceready", onDeviceReady, false);
 // Cordova is ready
 //
 function onDeviceReady() {
-    navigator.splashscreen.show();
+    navigator.splashscreen.hide();
 }
 
 $(document).foundation();
