--- a/public/www/index.html
+++ b/public/www/index.html
@@ -371,7 +371,7 @@ body{
 <!--_______________________________________________________-->
 
 <script type="text/javascript">
-
+$('.docs-wrap').hide();
 // Wait for Cordova to load
 //
 document.addEventListener("deviceready", onDeviceReady, false);
@@ -380,6 +380,7 @@ document.addEventListener("deviceready", onDeviceReady, false);
 //
 function onDeviceReady() {
     navigator.splashscreen.hide();
+    $('.docs-wrap').show();
 }
 
 $(document).foundation();
