fixed typo in argument name XD

--- a/public/www/index.html
+++ b/public/www/index.html
@@ -61,6 +61,7 @@ body{
   margin-right: -20px;
 }
 
+
 </style>
 
 </head>
@@ -283,6 +284,7 @@ body{
 <!--_____________________TEMPLATE BOOK START_____________________ -->
 <!--_______________________________________________________-->
 <script type="text/template" id="bookTemplate">
+  <div class="row">
   <div class="small-12 medium-6 large-3 columns">
     <div class="bookContainer panel">
       <div class="imgContainer"><img src="<%= coverImage %>"/></div>
@@ -312,6 +314,7 @@ body{
       <input type="text" id="keywords" placeholder="" value="<%= keywords %>" disabled="true">
     </div>
   </div>
+</div>
 </div>
 </script>
 <!--_______________________________________________________-->
